# aeqi

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .impeccable.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDOFF.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INDEXER.md  LICENSE  LUCAS_DREAM.md  NIGHT_SHIFT_BRIEF.md  OVERNIGHT-2026-04-24.md  OVERNIGHT_AGENT_A.md  OVERNIGHT_AGENT_C.md  OVERNIGHT_AGENT_E.md  PLAN.md  PROMPT.md  QUALITY_GATES.md  README.md  RELEASES.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SUPERCHARGE_IMPLEMENTATION_PLAN.md  TODO.md  VISION.md  aeqi_architecture_idea.md  deny.toml  docker-compose.yml  package-lock.json  package.json  platform-friction.md  security_tests.rs  (+2 more)
aeqi-cli/: Cargo.toml  build.rs
aeqi-cli/src/: cli.rs  helpers.rs  main.rs  service.rs
aeqi-cli/src/cmd/: agent.rs  audit.rs  chat.rs  check_runtime.rs  company.rs  config.rs  daemon.rs  deps.rs  doctor.rs  events.rs  graph.rs  hooks.rs  ideas.rs  init.rs  mcp.rs  memory.rs  mod.rs  monitor.rs  notes.rs  operation.rs  paths.rs  pipeline.rs  preflight.rs  primer.rs  prompt.rs  quests.rs  run.rs  secrets.rs  seed.rs  setup.rs  start.rs  status.rs  tasks.rs  team.rs  trust.rs  web.rs  work.rs
aeqi-cli/src/tui/: diff.rs  highlight.rs  markdown.rs  mod.rs  render.rs  state.rs  theme.rs
aeqi-cli/tests/: mcp_stdio.rs  setup_first_run.rs
crates/aeqi-architect/: Cargo.toml
crates/aeqi-architect/src/: generator.rs  lib.rs  llm.rs  types.rs
crates/aeqi-company/: Cargo.toml
crates/aeqi-company/src/: lib.rs
crates/aeqi-core/: Cargo.toml
crates/aeqi-core/src/: agent.rs  chat_stream.rs  checkpoint.rs  config.rs  detector.rs  frontmatter.rs  hooks.rs  lib.rs  prompt.rs  sanitize.rs  scope.rs  secure_path.rs  security.rs  streaming_executor.rs  tool_registry.rs
crates/aeqi-core/tests/: credential_substrate.rs
crates/aeqi-gates/: Cargo.toml
crates/aeqi-gates/src/: bridge.rs  discord.rs  lib.rs  slack.rs  suppression.rs  telegram.rs  whatsapp.rs  whatsapp_baileys.rs
crates/aeqi-graph/: Cargo.toml
crates/aeqi-graph/src/: lib.rs  quality.rs  schema.rs  storage.rs
crates/aeqi-graph/tests/: index_real.rs  integration.rs
crates/aeqi-hosting/: Cargo.toml
crates/aeqi-hosting/src/: lib.rs  local.rs  managed.rs  types.rs
crates/aeqi-ideas/: Cargo.toml
crates/aeqi-ideas/src/: debounce.rs  dedup.rs  embed_worker.rs  graph.rs  hierarchy.rs  hybrid.rs  inline_links.rs  lib.rs  lifecycle.rs  obsidian.rs  query_planner.rs  recall_cache.rs  redact.rs  relation.rs  retrieval.rs  sqlite.rs  tag_policy.rs  tag_ranker.rs  temporal_filter.rs  vector.rs
crates/aeqi-ideas/tests/: ann.rs  ann_bench.rs  dedup.rs  feedback.rs  integration.rs  migrations.rs
crates/aeqi-insights/: Cargo.toml
crates/aeqi-insights/src/: dedup.rs  graph.rs  lib.rs  lifecycle.rs  obsidian.rs  retrieval.rs  sqlite.rs  vector.rs
crates/aeqi-ipfs/: Cargo.toml
crates/aeqi-ipfs/src/: lib.rs
crates/aeqi-mcp/: Cargo.toml
crates/aeqi-mcp/src/: client.rs  config.rs  errors.rs  lib.rs  mock.rs  protocol.rs  registry.rs  tool.rs
crates/aeqi-mcp/tests/: integration.rs
crates/aeqi-orchestrator/: Cargo.toml
crates/aeqi-orchestrator/migrations/: 0001_convert_legacy_events.sql  0002_drop_legacy_event_columns.sql.disabled
crates/aeqi-orchestrator/src/: activity.rs  activity_log.rs  agent_registry.rs  agent_router.rs  agent_worker.rs  budget_registry.rs  channel_credential_migration.rs  channel_registry.rs  channel_session.rs  checkpoint.rs  claude_code.rs  context_budget.rs  daemon.rs  delegate.rs  dispatch.rs  entity_registry.rs  escalation.rs  event_handler.rs  event_matcher.rs  event_store.rs  event_validation.rs  execution_events.rs  execution_registry.rs  executor.rs  failure_analysis.rs  failure_classifier.rs  file_store.rs  gateway_manager.rs  hook.rs  idea_assembly.rs  identity_subscription.rs  lib.rs  llm_health.rs  mcp_bootstrap.rs  mentions.rs  message_router.rs  metrics.rs  operation.rs  pipeline.rs  placeholder_resolver.rs  (+27 more)
crates/aeqi-orchestrator/tests/: budget_acceptance.rs  cap_table_defaults.rs  channels_ipc.rs  entities_ipc.rs  entity_views.rs  ipc_harness_roundtrip.rs  ipc_roundtrip.rs  question_ask_inbox.rs  reflection_roundtrip.rs
crates/aeqi-pack-etsy/: Cargo.toml
crates/aeqi-pack-etsy/src/: lib.rs
crates/aeqi-pack-github/: Cargo.toml
crates/aeqi-pack-github/src/: api.rs  files.rs  issues.rs  lib.rs  prs.rs  releases.rs  search.rs
crates/aeqi-pack-github/tests/: github.rs
crates/aeqi-pack-google-workspace/: Cargo.toml
crates/aeqi-pack-google-workspace/src/: api.rs  calendar.rs  gmail.rs  lib.rs  meet.rs  request.rs
crates/aeqi-pack-google-workspace/tests/: google_workspace.rs
crates/aeqi-pack-notion/: Cargo.toml
crates/aeqi-pack-notion/src/: api.rs  blocks.rs  databases.rs  lib.rs  pages.rs  users.rs
crates/aeqi-pack-notion/tests/: notion.rs
crates/aeqi-pack-slack/: Cargo.toml
crates/aeqi-pack-slack/src/: api.rs  channels.rs  lib.rs  messages.rs  reactions.rs  search.rs  users.rs
crates/aeqi-pack-slack/tests/: slack.rs
crates/aeqi-paymaster/: Cargo.toml
crates/aeqi-paymaster/src/: api.rs  db.rs  error.rs  lib.rs  main.rs  policy.rs  signer.rs  types.rs
crates/aeqi-paymaster/tests/: api_smoke.rs  it_bundler_smoke.rs  it_paymaster_real_userop.rs
crates/aeqi-providers/: Cargo.toml
crates/aeqi-providers/src/: anthropic.rs  catalog.rs  credential_pool.rs  embedder.rs  fallback.rs  lib.rs  noop.rs  ollama.rs  openrouter.rs  pricing.rs  reliable.rs
crates/aeqi-quests/: Cargo.toml
crates/aeqi-quests/src/: dependency_inference.rs  lib.rs  presets.rs  query.rs  quest.rs  store.rs
crates/aeqi-test-support/: Cargo.toml
crates/aeqi-test-support/src/: harness.rs  lib.rs
crates/aeqi-tools/: Cargo.toml
crates/aeqi-tools/src/: edit.rs  execute_plan.rs  file.rs  file_safety.rs  git.rs  glob.rs  grep.rs  html_utils.rs  lib.rs  porkbun.rs  prompt.rs  quests.rs  secrets.rs  shell.rs  (+5 more)
crates/aeqi-trust/: Cargo.toml
crates/aeqi-wallets/: Cargo.toml
crates/aeqi-web/: Cargo.toml  build.rs
(+1940 files in other folders)
