[package]
name = "aeqi"
version.workspace = true
edition.workspace = true
description = "CLI, daemon, and web entrypoint for the AEQI agent runtime"

[[bin]]
name = "aeqi"
path = "src/main.rs"

[dependencies]
aeqi-core = { workspace = true }
aeqi-quests = { workspace = true }
aeqi-providers = { workspace = true }
aeqi-tools = { workspace = true }
aeqi-orchestrator = { workspace = true }
aeqi-gates = { workspace = true }
aeqi-insights = { workspace = true }
aeqi-web = { workspace = true }
aeqi-graph = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tungstenite = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
similar = { workspace = true }
