[package]
name = "aeqi-architect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AEQI Architect — meta-agent that turns a free-text brief into a deployable Blueprint"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
