[package]
name = "aeqi-company"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open-source company kernel for AEQI company and company identity primitives"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
