[package]
name = "aeqi-core"
version.workspace = true
edition.workspace = true
description = "Core types, traits, configuration, and identity for AEQI"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
