[package]
name = "aeqi-ideas"
version.workspace = true
edition.workspace = true
description = "Unified idea store — identity, skills, knowledge, memory in one place"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
aeqi-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
