[package]
name = "aeqi-ideas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified idea store — identity, skills, knowledge, memory in one place"

[features]
default = ["ann-sqlite-vec"]
# ANN via the sqlite-vec virtual table + sync triggers (migration v7).
# Default ON — the extension is statically linked; a brute-force fallback in
# `sqlite/search.rs` and `vector.rs` runs when the virtual table isn't
# available (e.g. `--no-default-features` builds or a runtime extension load
# failure on hosted SQLite).
ann-sqlite-vec = ["dep:sqlite-vec"]

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
aeqi-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
sqlite-vec = { version = "0.1.9", optional = true }
