[package]
name = "aeqi-ideas"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified idea store — identity, skills, knowledge, memory in one place"

[features]
default = []
# Enable the sqlite-vec ANN virtual table + sync triggers (migration v7).
# Off by default — Round 2 (Agent S) wires only the schema side; Agent N
# finishes the lookup path in Round 3c.
ann-sqlite-vec = []

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
aeqi-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
