[package]
name = "aeqi-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) client — surfaces remote MCP tools through aeqi's ToolRegistry"

[dependencies]
aeqi-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
