[package]
name = "aeqi-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent orchestration engine — worker pool, workers, chat, dispatch, and daemon"

[features]
default = ["google-workspace", "github", "notion", "slack"]
# Wisdom-pack tools that ship native Gmail / Calendar / Meet integrations
# backed by T1.9's `oauth2` credential lifecycle. Off-by-default callers can
# disable to slim the binary or to substitute their own provider pack.
google-workspace = ["dep:aeqi-pack-google-workspace"]
# Wisdom-pack tools that ship native GitHub issues / PRs / files / releases
# / search backed by T1.9's `github_app` (preferred) or `oauth2` lifecycle.
github = ["dep:aeqi-pack-github"]
# Wisdom-pack tools that ship native Notion pages / databases / blocks /
# users backed by T1.9's `oauth2` lifecycle (per-workspace scoping).
notion = ["dep:aeqi-pack-notion"]
# Wisdom-pack tools that ship native Slack channels / messages / reactions /
# users / search backed by T1.9's `oauth2` lifecycle.
slack = ["dep:aeqi-pack-slack"]

[dependencies]
aeqi-core = { workspace = true }
aeqi-ideas = { workspace = true }
aeqi-quests = { workspace = true }
aeqi-providers = { workspace = true }
aeqi-tools = { workspace = true }
aeqi-mcp = { workspace = true }
aeqi-graph = { workspace = true }
aeqi-gates = { workspace = true }
aeqi-pack-google-workspace = { workspace = true, optional = true }
aeqi-pack-github = { workspace = true, optional = true }
aeqi-pack-notion = { workspace = true, optional = true }
aeqi-pack-slack = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# `aeqi-test-support` depends on `aeqi-orchestrator` to expose
# `TestHarness` (a full `CommandContext` builder). Cargo permits this
# dev-dep back-edge because dev-deps are excluded from the non-test
# dependency graph. Integration tests under `tests/` can therefore
# `use aeqi_test_support::TestHarness;` safely.
aeqi-test-support = { workspace = true }
