[package]
name = "aeqi-pack-etsy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wisdom pack — Etsy shops / listings / orders backed by T1.9's oauth2 lifecycle"

[dependencies]
aeqi-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
