[package]
name = "aeqi-paymaster"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ERC-4337 paymaster signing service — approves and signs UserOp gas sponsorships for aeqi Entities"

[[bin]]
name = "aeqi-paymaster"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
