[package]
name = "aeqi-quests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Quest DAG management, missions, and dependency inference"

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
aeqi-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
