[package]
name = "aeqi-trust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Open-source trust kernel for AEQI company and trust identity primitives"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
