[package]
name = "aeqi-wallets"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Threshold-ECDSA wallet, key custody, passkey, SIWE, and session-key delegation primitives for AEQI"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

# Crypto / KEK
chacha20poly1305 = { workspace = true }
argon2 = { version = "0.5", features = ["std"] }
zeroize = { version = "1.8", features = ["derive"] }
secrecy = "0.10"

# secp256k1 primitives for ECDSA + EVM address derivation
k256 = { version = "0.13", features = ["ecdsa", "schnorr", "arithmetic"] }

# BIP-39 mnemonic (recovery seeds)
bip39 = { version = "2", features = ["rand"] }

# Keccak256 for EVM address derivation
sha3 = "0.10"

# Sign-In With Ethereum (EIP-4361) — Spruce's reference implementation
siwe = "0.6"
# `time` is the timestamp type the siwe crate uses in VerificationOpts
time = "0.3"

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "argon_kek_spike"
path = "examples/argon_kek_spike.rs"
