[package]
name = "aeqi-budget"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AEQI Budget module — role-bound treasury allocations + spend tracking"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeqi_budget"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "aeqi-role/idl-build", "aeqi-company/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
aeqi-role = { path = "../aeqi-role", features = ["cpi"] }
aeqi-company = { path = "../aeqi-company", features = ["cpi"] }
