[package]
name = "aeqi-funding"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AEQI Funding module — capital raise orchestration over Unifutures + Budget"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeqi_funding"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "aeqi-budget/idl-build", "aeqi-unifutures/idl-build", "aeqi-trust/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
aeqi-budget = { path = "../aeqi-budget", features = ["cpi"] }
aeqi-unifutures = { path = "../aeqi-unifutures", features = ["cpi"] }
aeqi-trust = { path = "../aeqi-trust", features = ["cpi"] }
