[package]
name = "aeqi-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AEQI Governance module — proposals, voting (token + per-role multisig)"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeqi_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build", "aeqi-trust/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
aeqi-trust = { path = "../aeqi-trust", features = ["cpi"] }
